fix: align convert svg button in header nav for safari (#138)
fix: align convert svg button in safari

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -112,6 +112,9 @@
       svg {
         width: 100%;
         height: 100%;
+        margin: 0;
+        padding: 0;
+        max-width: 24px;
       }
     }
   }
